Fixed nav overfollow issue on Mobile Phone devices

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
     background-position: center;
     height: 100%;
     width: 100%;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 .Lambo_header {
@@ -123,7 +123,7 @@ body {
 }
 
 .toggle_ham:checked ~ .Lambo_nav {
-    right: 0;
+    transform: translate(228.3% , 57%);
 }
 
 @media screen and (max-width: 768px) {
@@ -139,14 +139,15 @@ body {
 
     .Lambo_nav {
         position: absolute;
-        top: 13.5%;
-        right: -300px;
+        /* top: 13.5%;
+        right: -300px; */
         height: 100%;
         width: 30%;
         backdrop-filter: blur(10px);
         z-index: 3;
-        background-color: red;
+        /* background-color: red; */
         border-radius: 4vw 0 0 4vw;
+        transform: translate(228.3% , -100%);
     }
     
     .ham_holder:checked ~ .Lambo_nav {
